# financial

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: backtest-validator.md  code-reviewer.md  feature-worker.md  finder.md  test-writer.md
.claude/commands/: bench.md  feature.md  plan-parallel.md  review.md  ship.md  tests.md  verify.md
.claude/hooks/: block_dangerous.py  session_summary.py
.claude/skills/: ship.md  test-conventions.md  validating-backtest.md
.codex/skills/: accessing-local-data.md  adding-features.md  building-scanner-rows.md  data-access.md  reviewing-code.md  scanner-patterns.md  writing-tests.md
config/: bench.yaml  dividend_portfolio.yaml  macro_calendar.yaml
docs/adr/: ADR-001-event-driven.md  ADR-002-redis-vs-kafka.md
docs/ai/: anti-patterns.md  context-map.md
docs/architecture/: backtest-performance-plan.md  backtest.md  components.md  current-options-scanner-decision-layer.md  current-options-scanner.md  dividend-tracker.md  event-model.md  future-state.md  ibkr-positions.md  ibkr-trades.md  irpf-report.md  legacy-options-scanner.md  logical-view.md  market-scanner-decision-layer.md  market-scanner.md  module-boundaries.md  overview.md  stock-analyzer.md
docs/arquitecture/: components.md  evend-model.md  future-state.md  logical-view.md  overview.md
docs/runbooks/: daily-market-report.md  local-setup.md  project-session-bootstrap.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
reports/backtest/: dividend_model_comparison.md
scripts/: profile_scanner.py
src/: bench.py
src/dividend_tracker/: __init__.py  backtest.py  config.py  decision.py  dividend_data.py  ibkr_enricher.py  main.py  price_ceiling.py  report.py
src/ibkr_positions/: client.py  html_report.py  main.py  models.py  options_export.py  reconciler.py  report.py  risk.py  snapshot_store.py
src/ibkr_trades/: api_fetcher.py  flex_fetcher.py  flex_parser.py  main.py  models.py  roll_detector.py  (+3 more)
(+258 files in other folders)
