[project]
name = "financial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-insync>=0.9.86",
    "ibapi>=9.81.1.post1",
    "joblib>=1.5.3",
    "mplfinance>=0.12.10b0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
